--- a/defs.tex
+++ b/defs.tex
@@ -23,6 +23,7 @@
 \newcommand{\add}[1]{\color{blue}#1\color{black}{}}
 \newcommand{\rmv}[1]{\color{grey}\ensuremath{\vdash}#1\ensuremath{\dashv}\color{black}{}}
 \newcommand{\mdf}[1]{{\color{red}#1}}
+\newcommand{\todo}[1]{{\color{red}\textbf{\texttt{TODO: #1}}}}
 \newcommand{\coloruse}{\marginpar{\scriptsize
 \add%
 {added}\\ \mdf%
