--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1225,6 +1225,12 @@ lts.fzu.cz/pdf/d-js.pdf
 	title = {MEEP metamaterial simulation scripts, \textit{https://github.com/FilipDominec/meep\_metamaterials}, last visited {M}ay 2014},
 	howpublished ={Online},
 }
+@misc{dominec2014_imagej,
+	author = {Dominec, Filip},
+	title = {Calculating size distribution of powder particles using ImageJ, \textit{http://f.dominec.eu/granulo/index.html}, last visited {A}pril 2015},
+	howpublished ={Online},
+}
+
 
 @article{taflove2005book,
   title={Computational Electrodynamics: The Finite-Difference Time-Domain Method (Artech House, 2005)},
@@ -1256,6 +1262,18 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2007},
   publisher={Optical Society of America}
 }
+-- other non-simulation --
+@article{abramoff2004image,
+  title={Image processing with ImageJ},
+  author={Abr{\`a}moff, Michael D and Magalh{\~a}es, Paulo J and Ram, Sunanda J},
+  journal={Biophotonics international},
+  volume={11},
+  number={7},
+  pages={36--43},
+  year={2004},
+  publisher={LAURIN}
+}
+
 /*}}}*/
 
 % -- Filter diagonalisation (todo) --/*{{{*/
