--- a/numeric.tex
+++ b/numeric.tex
@@ -423,14 +423,14 @@ The general electromagnetic methods, such as FDTD, FDFD or FEM, can be employed 
 The scattering parameter retrieval, also known as the \textit{s-parameter}, \textit{distributed impedance} or \textit{Nicolson-Ross-Weir} (NRW) method \cite{nicolson1970measurement, weir1974automatic}, has been used since 1970s to experimentally retrieve the index of refraction $N$ and wave impedance $Z$ of a homogeneous material sample, originally in the microwave range. It is based on the fact that, using Fresnel-Airy formulas, as shown in the Appendix \ref{app_fresnel},
 one can easily compute the transmission $t$ and reflection $r$ from a slab of any material, provided its thickness $d$, index of refraction $N$ and wave impedance $Z$ are known.  If $r,t$ are known instead, the Fresnel-Airy formulas can be inverted to yield $N$ and $Z$ of the material the slab consists of. The actual computation is thus denoted also as \textit{Fresnel inversion}.
 
-Mathematically, this can always be done (see Appendix \label{app_fresnel_inv}), and this method yields some \textit{effective} parameters, $\Neff$ and $\Zeff$, even when the homogeneous sample is replaced with an inhomogeneous structure, such as a layer of a metamaterial. As a great advantage of this approach, there is no requirement to inspect the fields inside the tested structure, as the retrieval is based only on the amplitude and phase of $r,t$ outside the material. Thanks to its ease to realize both experimentally and numerically, with FDTD or other algorithms, %% (in fact, this is independent of FDTD, only to the time-marching methods) \cite{terao2011}
+Mathematically, this can always be done (see Appendix \label{app_fresnel_inv}), and this method yields some \textit{effective} parameters, $\Neff$ and $\Zeff$, even when the homogeneous sample is replaced with an inhomogeneous structure, such as a layer of a metamaterial. As a great advantage of this approach, there is no requirement to inspect the fields inside the tested structure, as the retrieval is based only on the amplitude and phase of $r(f)$ and $t(f)$ outside the material. Thanks to its ease to realize both experimentally and numerically, with FDTD or other algorithms, %% (in fact, this is independent of FDTD, only to the time-marching methods) \cite{terao2011}
 it has become a popular way to retrieve the effective metamaterial parameters. 
 
 The most often mentioned issue of this method is that the solutions have infinitely many branches, and it is necessary to establish which one should be chosen, and why. In this chapter we describe that this can, in fact, be solved relatively easily, and in the Section \ref{section_result} it is shown that the outcomes may be quite surprising.
 Aside from yielding multiple branches, the physical interpretation of the data can get even more intricate when effective parameters are to be assigned to an inhomogeneous slab of a metamaterial. Due attention has to be paid to minimize the intrinsic imprecision of this method, as well as to establish the limits of its applicability. 
 %}}}
 \paragraph{Simulation setup} %{{{
-\begin{figure}[ht] \centering \caption{The setup of the FDTD simulation for the scattering parameter method} \includegraphics[width=12cm]{img/meep_geometry.pdf}  \label{fg_fdtd_sparam} \end{figure} %% TODO add the X-Y-Z arrows
+\begin{figure}[ht] \centering \caption{The setup of the FDTD simulation for the scattering parameter method\todo{add the X-Y-Z arrows}} \includegraphics[width=12cm]{img/meep_geometry.pdf}  \label{fg_fdtd_sparam} \end{figure} %% 
 The setup of the simulation is depicted in Fig. \ref{fg_fdtd_sparam}. The wave is emitted from the source plane (green rectangle) with a direction parallel to the $z$-axis. The temporal shape of the wave was not critical for the simulation; a very short pulse, with a spectrum spanning from the GHz range to ca. 5 THz was used. 
 
 The periodic boundary conditions were set on the $x$- and $y$-axes, so that effectively an infinite metamaterial slab was simulated. On both faces perpendicular to the $z$ axis we added perfectly matched layers to absorb all radiation (pink blocks). The implementation used is based on gradually introducing imaginary part into the unit cell dimensions  to prevent reflections under arbitrary incidence angle, polarisation or frequency of the wave. There are different approaches for this problem \cite{oskooi2011distinguishing}. %, thus 
@@ -438,10 +438,12 @@ The periodic boundary conditions were set on the $x$- and $y$-axes, so that effe
 The electric and magnetic fields are averaged and recorded by the monitor planes (blue rectangles) in each simulation step.  %% add FK: as described in detail in Sec. 1.1 ??
 
 Passing through the first monitor plane, the wave enters the volume of the unit cell (delimited by empty rectangles) and interacts with the structure. A part of its energy is reflected back, a part passes through and part may be dissipated if the structure was lossy. The fields that passed through the structure are recorded by the second monitor plane. After the energy stored in the structure drops to a small enough level, the FDTD simulation was terminated and the recorded fields are processed to obtain the complex-valued reflection $r(f)$ and transmission $t(f)$ as functions of frequency $f$. Before this procedure is described, a modification important for the accuracy of this setup is discussed below.
-%% TODO convert frequency f to omega? Why not?
-\begin{figure}[ht] \caption{An example result of a FDTD simulation (visualised using the \textit{Paraview} program). A dielectric sphere, shown in grey, was placed in a less usual, but equivalent position, across the periodic boundaries. The electric field amplitude was shown in one quarter of the simulation volume, with a clear enhancement near the dielectric surface (pink-red).}  \centering \includegraphics[width=10cm]{img/sim_screen.pdf} \label{fg_} \end{figure} 
+\todo{convert frequency f to omega? Why not?}
+
+\begin{figure}[ht] \caption{An example result of a FDTD simulation (visualised using the \textit{Paraview} program). A dielectric sphere, shown in grey, was placed in a less usual, but equivalent position, across the periodic boundaries. The electric field amplitude was shown in one quarter of the simulation volume, with a clear enhancement near the dielectric surface (pink-red). \todo{replace this with better one}}  \centering \includegraphics[width=10cm]{img/sim_screen.pdf} \label{fg_fdtdscreen} \end{figure} 
 %}}}
 \paragraph{Avoiding the near-field response in monitor planes} %{{{
+\label{par_nearfield}
 %% Hynek's trick
 With the obvious exception of an effectively one-dimensional structure of layers perpendicular to the wave propagation, any other structure will change the orientation of the electric and magnetic fields. Such a perturbation of the field will be localized around the structure, and exponentially decaying with the distance in the form of an \textit{evanescent wave}.
 
@@ -507,14 +509,13 @@ Finally, one can easily compute the complex scattering parameters $r(f)$ and $t(
 %}}}
 \paragraph{Experimental verification of reflection and transmission} %{{{
 \begin{figure} 
-\caption{\textbf{a)} Electron microphotograph of the STO array (from \cite{nemec2009tunable}), % TODO from HNemec, et al. Tunable terahertz metamaterials with e z~negative permeability, Phys. Rev. B 79, 241108(R) (2009) 
-%\begin{figure} \caption{img/STOBar\_photo.pdf}  \centering  \end{figure} \clearpage
+\caption{\textbf{a)} Electron microphotograph of the STO array (from \cite{nemec2009tunable}), 
 \textbf{b)} dimensions of one unit cell thereof, with the orientation of the $\E$, $\HH$ and $\kk$ vectors}  \centering 
 \textbf{a)} \mbox{\vspace{3cm} \includegraphics[width=9cm]{img/STOBar_photo.pdf}}  % \includegraphics[width=5cm]{img/STOBar_photo_narrow.pdf}
 \mbox{\textbf{b)} \mbox{\vspace{3cm}\includegraphics[width=5cm]{img/EBars_STO_sketch.pdf}} }
 \label{fg_STO_bar_geom} \end{figure} 
 To verify the simulation results against experimental data, we computed $r(f)$ and $t(f)$ for a structure that was measured previously in our terahertz laboratory.
-It consisted of an array of high-permittivity dielectric bars, cut using a femtosecond laser % TODO what laser power and other parameters?
+It consisted of an array of high-permittivity dielectric bars, cut using a femtosecond laser \todo{what was the laser power and other parameters?}
 from a 26 $\upmu$m thick strontium titanate (STO) slab \cite{nemec2009tunable}. The periodicity was 96 $\upmu$m and the laser cut width was 30 $\upmu$m, resulting in 66 $\upmu$m width of each rectangular bar as shown in Fig. \ref{fg_STO_bar_geom}a,b. The permittivity of STO strongly depends on the temperature, and was not known a priori, so it was chosen as $\varepsilon_r(1\text{ THz}) = 365 + 62\ii$ for the simulation to match the experimental spectra.
 \begin{figure} \caption{Experimental transmission $t_{exp}(f)$, compared to numerical reflection $r(f)$ and transmission $t(f)$ for strontium titanate bars $||\mathbf E$ of rectangular cross-section $26 \times 66\;\upmu$m. }  \centering \includegraphics[width=12cm]{img/STObar_rt.pdf} \label{fg_STO_bar_rt} \end{figure} 
 The curves computed using the FDTD simulations are compared to the experimental ones in Fig. \ref{fg_STO_bar_rt}, with a very good match in three well-resolved resonance peaks, and also in the high reflectivity ($|r| > 0.9$) in most of the spectrum which is caused by a great impedance mismatch between the dielectric and the surrounding air.
@@ -527,7 +528,8 @@ A more elaborate discussion of periodic structures composed of dielectric bars/r
 %}}}
 \paragraph{Retrieval of effective parameters} %{{{
 So far, we computed the amplitude and phase of frequency-dependent reflectance $r(f)$ and transmittance $t(f)$ for a finite number of metameterial cell layers. 
-These data, if supplied with the cell thickness $d$, are also sufficient to deduce the behaviour of a periodic structure composed of an infinity of such unit cells, i.e., to retrieve the effective parameters of the structure. % TODO this needs some discussion, if it is possible etc. ... or at least to get isofrequency contours if effparam do not exist, or if the method is too approximate
+These data, if supplied with the cell thickness $d$, are under some circumstances also sufficient to deduce the behaviour of a periodic structure composed of an infinity of such unit cells, i.e., to retrieve the effective parameters of the structure. 
+\todo{this needs some discussion, if it is possible etc. ... or at least to get isofrequency contours if effparam do not exist, or if the method is too approximate}
 To this end, we employ the Fresnel inversion and a custom way of obtaining physically meaningful  solution.
 % TODO develop this somehow, cite Rockstuhs2004, relate to spatial dispersion and nonlocality - the evanescent field can be decomposed into dipoles, quadrupoles etc}
 %It shall be noted that although the structure consists of a single layer, transmission and reflection is measured in the form of radiated waves to compute effective parameters for an infinite structure. The energy transferred by near field (evanescent wave) is neglected here. 
@@ -540,9 +542,7 @@ Note that in the literature, the Fresnel coefficients are often expressed in a s
 $$N \equiv \sqrt{\varepsilon_r \mu_r} = \sqrt{\mu_r/\varepsilon_r } \equiv 1/Z.$$ 
 The complex reflectance $r_{s}$ and transmittance $t_{s}$ of a homogeneous slab with given wave impedance $z$, index of refraction $n$ and thickness $d$ can be computed by summing the infinite series of internal reflections.
 
-\mdf{TODO add infinite sums for Fabry-Pérot resonances in a slab}
-% TODO expressions -> develop from Fresnel to effparam -> Put into appendix?
-
+\todo{add infinite sums for Fabry-Pérot resonances in a slab; develop expressions from Fresnel to effparam, and put into appendix?}
 Knowing the complex $r(f)$ and $t(f)$ along with the sample thickness $d$, we may use the
 classical algorithm \cite{smith2002determination} to retrieve the effective index of refraction:
 \begin{equation}
@@ -564,7 +564,7 @@ and the Kramers-Kronig relations are a good verification of a correct solution. 
 so the postprocesing of FDTD data corresponds to unambiguous \textit{unfolding} of the dispersion curves.
 
 %See ~/p/MEEP_2013/130711_EWires/19_TiO2_cellscan_thick_HR/
-\begin{figure} \centering \caption{\textbf{a,b)} Real and imaginary parts of the arccosine of complex argument $\upsilon$. Branch cuts are denoted with thick lines. The thick curve shows a possible trajectory of  $\upsilon(f)$ (upon a frequency variation), which intersects the branch cuts in points marked as R, L. \textbf{c)} From top to bottom: example function  $\upsilon(f)$, its ordinary arccosine, example branch and sign choices ensuring the continuity of the arccosine function, and the continuous version of $\arccos_{\mathrm{c}}(\upsilon)$, as determined by the algorithm described.} \includegraphics[width=16cm]{img/continuous_arccos/continuous_arccos_new.pdf} \label{fg_arccos}
+\begin{figure} \centering \caption{\textbf{(a)} Real and \textbf{(b)} imaginary parts of the arccosine of complex argument $\upsilon$. Branch cuts are denoted with thick lines. The thick curve shows a possible trajectory of  $\upsilon(f)$ (upon a frequency variation), which intersects the branch cuts in points marked as R, L.\\ \textbf{(c)} From top to bottom: example function  $\upsilon(f)$, its ordinary arccosine, example branch and sign choices ensuring the continuity of the arccosine function, and the continuous version of $\arccos_{\mathrm{c}}(\upsilon)$, as determined by the algorithm described.} \includegraphics[width=16cm]{img/continuous_arccos/continuous_arccos_new.pdf} \label{fg_arccos}
 \end{figure}
 We deal with a passive medium, consequently we impose Im$(\Neff)>0$ %TODO WRONG, sign must be opposite
  and Re$(\Zeff)>0$. 
